fix remove button ocupy too much spacce

--- a/react-app/src/components/Cart/CartItem/CartItem.css
+++ b/react-app/src/components/Cart/CartItem/CartItem.css
@@ -47,6 +47,7 @@ h2 {
 
 .remove-btn {
   cursor: pointer;
+  width: fit-content;
 }
 
 
